public/index.css
@font-face {
    font-family: ArialRounded;
    src: url(fonts/Arial%20Rounded%20MT%20Bold%20Bold.ttf);
}
@font-face {
    font-family: ChaletNewYork;
    src: url(fonts/ChaletLondonNineteenSeventy.ttf);
}
@font-face {
    font-family: HelveticaNeue;
    src: url(fonts/HelveticaNeue.ttf);
}
@font-face {
    font-family: HipsterScriptPro;
    src: url(fonts/HipsterScriptPro.otf);
}
@import url(http://fonts.googleapis.com/css?family=Open+Sans);
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}
*, *:after, *:before {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}
body {
    overflow: hidden;
    position: fixed;
}
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    min-height: 100%;
    background: #fff;
    font: 13px/1.5em 'Open Sans', Helvetica, Arial, sans-serif;
    overflow: hidden;
}
#navbar {
    border-bottom: 3px solid #f0f0f0;
    position: fixed;
    width: 100%;
}
#navbar>div {
    display: inline-block;
    color: #ccc;
    margin-right: 5px;
}
#navbar .pipe {
    font-size: 30px;
    color: #ccc;
}
#navbar .hamburger {
    font-size: 20px;
    margin-left: -3px;
}
#navbar .logo {
    color: #EE6C49;
    font-size: 28px;
    font-weight: bold;
    border-bottom: 3px solid;
    display: inline-block;
    padding: 6px 0 3px;
    margin-bottom: -3px;
    font-family: 'ChaletNewYork';
}
#navbar .messages {
    font-size: 24px;
}
#navbar .heart {
    font-size: 24px;
}
a {
    color: #4986e7;
}
pre {
    background: #fff;
    padding: 20px;
    margin-bottom: 20px;
}
.container {
    max-width: 900px;
    margin: 0 auto;
}
.clear {
    clear: both;
}
.bg1, .green { background: #42d692; }
.bg2, .blue { background: #4986e7; }
.bg3, .red { background: #d06b64; }
.bg4, .purple { background: #cd74e6; }
.bg5, .azure { background: #9fe1e7; }
.animate {
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}
#content {
    position: absolute;
}
.card>.like {
    position: absolute;
    left: 10%;
    top: 10%;
    text-transform: uppercase;
    border: 3px solid;
    padding: .4em;
    font-size: 2.25em;
    border-radius: 5px;
    transform: rotate(-10deg);
    color: #63DE9A;
    font-weight: bolder;
    font-family: "Arial";
}
.card>.nope {
    position: absolute;
    right: 10%;
    top: 10%;
    text-transform: uppercase;
    border: 3px solid;
    padding: .4em;
    font-size: 2.25em;
    border-radius: 5px;
    transform: rotate(10deg);
    color: #EE6C49;
    font-weight: bolder;
    font-family: "Arial";
}
.like, .nope {
    /*opacity: .25;*/
}
.card {
    position: absolute;
    background: #fff;
    width: 300px;
    height: 300px;
    padding: 0;
    border: 1px solid #f0f0f0;
    border-radius: 5px;
    z-index: 1;
}
.card>.profile-pic {
    height: 90%;
    overflow: hidden;
}
.profile-pic>img {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    display: block;
    object-fit: cover;
    overflow: hidden;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.card>.info {
    width: 100%;
    background: #fff;
    font-size: 1.5em;
    padding-left: 15px;
    color: #555;
    font-family: 'ArialRounded';
    height: 42px;
    bottom: 0;
    position: fixed;
}
.info>span {
    margin-top: .5em;
    display: inline-block;
}
.btn {
    border: 1px solid #4986e7;
    border-radius: 3px;
    padding: .5em;
    cursor: pointer;
}
.lower-card {

}
.test-btn {
    float: right;
    display: none;
}
.full-opacity {
    opacity: 1;
}
.btn-left {
    background-color: #82F1CC;
}
.btn-right {
    background-color: #EBAA99;
}
.hidden {
    visibility: hidden;
}
#meet-me-modal {
    position: fixed;
    font-family: Arial, Helvetica, sans-serif;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.8);
    z-index: 99999;
    opacity:0;
    -webkit-transition: opacity 400ms ease-in;
    -moz-transition: opacity 400ms ease-in;
    transition: opacity 400ms ease-in;
    pointer-events: none;
}
#meet-me-modal.active {
    opacity:1;
    pointer-events: auto;
}
#meet-me-modal>.heading {
    text-align: center;
    font-size: 4em;
    color: #fff;
    font-family: 'HipsterScriptPro';
    padding-top: 1em;
    display: inline-table;
    width: 100%;
}
#meet-me-modal>.description {
    text-align: center;
    font-size: 18px;
    color: #fff;
    font-family: 'HelveticaNeue';
}
#meet-me-modal>#icons {
    text-align: center;
    margin-top: 20px;
}
#meet-me-modal>#icons>div {
    display: inline-block;
}
#meet-me-modal>#icons>div>img {
    border-radius: 100%;
    border: 5px solid #fff;
    object-fit: cover;
    overflow: hidden;
    width: 125px;
    height: 125px;
}
#meet-me-modal>#icons>.user>img {
    margin-right: 5px;
}
#meet-me-modal>#icons>.matched-user>img {
    margin-left: 5px;
}
#meet-me-modal>.footer {
    bottom: 0;
    position: fixed;
    width: 100%;
}
#meet-me-modal>.footer>div {
    display: flex;
    text-align: center;
}
#meet-me-modal>.footer .btn {
    background-color: #fff;
    border: 1px solid #707070;
    color: #707070;
    padding: .5em 1em;
    font-size: 1.25em;
    margin: 0 auto;
    margin-bottom: 15px;
    border-radius: 5px;
    font-family: 'ArialRounded';
    width: 12em;
}
#meet-me-modal>.footer .link {
    color: #fff;
    font-size: 1.25em;
    margin: 10px auto 20px;
    font-family: 'HelveticaNeue';
}
#buttons {
    position: fixed;
    width: 100%;
    bottom: 0;
    text-align: center;
    padding-bottom: 10px;
    z-index: -1;
}
#buttons>div {
    display: inline-block;
    margin: 0 -6px;
}
.btn-rewind, .btn-superlike {
    vertical-align: top;
}
.btn-rewind>span {
    color: #FFCE65;
    font-size: 26px;
    border: 8px solid #F1F1F1;
    border-radius: 100%;
    padding: 12px;
    vertical-align: bottom;
}
.btn-nope>span {
    color: #EE6C49;
    font-size: 36px;
    border: 8px solid #F1F1F1;
    border-radius: 100%;
    padding: 18px;
}
.btn-like>span {
    color: #63DE9A;
    font-size: 36px;
    border: 8px solid #F1F1F1;
    border-radius: 100%;
    padding: 18px;
}
.btn-superlike>span {
    color: #2DB3C9;
    font-size: 26px;
    border: 8px solid #F1F1F1;
    border-radius: 100%;
    padding: 12px;
    vertical-align: bottom;
}

